<resources>
    <string name="app_name">FootballApp</string>
    <string name="label_football_app">Football App</string>
    <string name="label_desc_home">Temukan Pertandingan menarik dan Tim kesayangan anda di Football App.</string>
    <string name="label_choose_league">Pilih Liga</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">type something</string>
    <string name="title_tab_match">Match</string>
    <string name="title_tab_team">Team</string>
    <string name="title_tab_standing">Standing</string>
    <string name="label_country">Country</string>
    <string name="label_first_event">First Event</string>
    <string name="label_gender">Gender</string>
    <string name="label_detail_league">Detail League</string>
    <string name="label_dash">-</string>
    <string name="label_played">Played</string>
    <string name="label_win">Win</string>
    <string name="label_lose">Lose</string>
    <string name="label_draw">Draw</string>
    <string name="label_gm">GM</string>
    <string name="label_gk">GK</string>
    <string name="label_score">Score</string>
    <string name="label_formation">Formation</string>
    <string name="label_home_goal_details">Home Goal Details :</string>
    <string name="label_away_goal_details">Away Goal Details :</string>
    <string name="label_shoots">Shoots</string>
    <string name="label_detail_match">Detail Match</string>
    <string name="label_sport">Sport</string>
    <string name="label_year">Year</string>
    <string name="label_stadium">Stadium</string>
    <string name="label_description">Description</string>
    <string name="label_detail_team">Detail Team</string>
    <string name="hint_search">Search</string>
    <string name="label_favorite">Favorite</string>
</resources>