<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dimen_10dp"
    tools:context=".ui.standing.StandingFragment">

        <ProgressBar
            android:id="@+id/pbStanding"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/containerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:textColor="@color/colorBlack"
                android:text="@string/title_tab_team"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/label_played"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/label_win"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/label_lose"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/label_draw"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/label_gm"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/label_gk"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStanding"
            android:layout_width="match_parent"
            android:layout_below="@+id/containerHeader"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rvStanding"
            android:background="@color/colorBlack" />

</RelativeLayout>
