<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:id="@+id/relativeView"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@color/colorPrimary">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/BaseTextView.Bold"
                    android:layout_marginStart="@dimen/dimen_60dp"
                    android:layout_marginTop="@dimen/dimen_14dp"
                    android:text="@string/label_detail_team"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ProgressBar
                            android:id="@+id/pbDetailTeam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgTeamLogo"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:scaleType="centerCrop"
                            tools:src="@color/colorAccent" />

                        <TextView
                            android:id="@+id/tvTeamName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgTeamLogo"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/dimen_text_18sp"
                            android:textStyle="bold"
                            tools:text="Arsenal" />

                        <TextView
                            android:id="@+id/tvLeagueName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTeamName"
                            android:layout_marginBottom="20dp"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            tools:text="English Premiere League" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_white"
                app:popupTheme="@style/AppTheme" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLabelYear"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/label_year"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLabelCountry"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/label_country"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLabelSport"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/label_sport"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValueYear"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelCountry"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:textColor="@color/colorBlack"
                tools:text="@string/label_year" />

            <TextView
                android:id="@+id/tvValueCountry"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelCountry"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                tools:text="@string/label_country" />

            <TextView
                android:id="@+id/tvValueSport"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelCountry"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                tools:text="@string/label_sport" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvValueYear"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorGrey2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_stadium"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvValueStadium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorBlack"
                    tools:text="@tools:sample/lorem/random" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorGrey2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_description"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvValueDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/colorBlack"
                    tools:text="@tools:sample/lorem/random" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorGrey2" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
