<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:id="@+id/containerHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/BaseTextView.Bold"
                    android:text="@string/label_detail_league"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="@dimen/dimen_14dp"
                    android:textSize="@dimen/dimen_text_20sp"
                    android:layout_marginStart="@dimen/dimen_60dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    app:cardCornerRadius="@dimen/dimen_8dp"
                    app:cardElevation="@dimen/dimen_8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <ProgressBar
                            android:id="@+id/pbDetailLeague"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgLeague"
                            android:layout_width="@dimen/dimen_100dp"
                            android:layout_height="@dimen/dimen_100dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/dimen_16dp"
                            android:layout_marginTop="@dimen/dimen_16dp"
                            tools:src="@drawable/ic_australian_a_league" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvLeagueName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_8dp"
                            android:layout_marginTop="@dimen/dimen_16dp"
                            android:layout_toEndOf="@+id/imgLeague"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/dimen_text_16sp"
                            android:textStyle="bold"
                            tools:text="League Name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDescLeague"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvLeagueName"
                            android:layout_marginHorizontal="@dimen/dimen_8dp"
                            android:layout_marginTop="@dimen/dimen_4dp"
                            android:layout_toEndOf="@+id/imgLeague"
                            android:maxLines="5"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/dimen_text_14sp"
                            tools:text="Description League" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTitleCountry"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgLeague"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:gravity="center"
                            android:text="@string/label_country"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTitleEvent"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgLeague"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:layout_toEndOf="@+id/tvTitleCountry"
                            android:gravity="center"
                            android:text="@string/label_first_event"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTitleGender"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgLeague"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:layout_toEndOf="@+id/tvTitleEvent"
                            android:gravity="center"
                            android:text="@string/label_gender"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCountry"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTitleCountry"
                            android:layout_marginTop="@dimen/dimen_4dp"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            tools:text="England" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvEvent"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTitleCountry"
                            android:layout_marginTop="@dimen/dimen_4dp"
                            android:layout_toEndOf="@+id/tvCountry"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            tools:text="2000-08-18" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvGender"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTitleCountry"
                            android:layout_marginTop="@dimen/dimen_4dp"
                            android:layout_toEndOf="@+id/tvEvent"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            tools:text="male" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_white"
                app:popupTheme="@style/AppTheme" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpDetailLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabDetailLeague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/colorGrey2"
                app:tabTextColor="@color/colorBlack" />

        </androidx.viewpager.widget.ViewPager>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
